# mac_traffic_monitor

./: .gitignore  Cargo.toml  README.md
assets/icons/: rocket.icns
scripts/: package_app.sh
src/: main.rs
src/app/: autostart.rs  constants.rs  format.rs  icon.rs  mod.rs  monitor.rs  network.rs  types.rs
src/app/ui/: actions.rs  menu.rs  mod.rs  status_item.rs
